# rusty-wolf

./: .gitignore  Cargo.toml  README.md  ]
aiwolf_server/: Makefile  conf.py  index.rst  make.bat
aiwolf_server/about_aiwolf/: lib.rst  rule.rst
aiwolf_server/example/: json.rst  lib.rst  protocol.rst
aiwolf_server/overview/: lib.rst  rule.rst  server.rst
common/: Cargo.toml
common/src/: lib.rs
connection/simple_io/: Cargo.toml
connection/simple_std/: Cargo.toml
connection/simple_std/src/: lib.rs
packet/light/: Cargo.toml
packet/simple/: Cargo.toml
packet/simple/src/: lib.rs
prospectus/: Makefile  conclusion.rst  conf.py  index.rst  make.bat
prospectus/server_composition/: ConverterSystem.eps  IntegrationServerSystem.eps  TCPServer.eps  conventional.rst  lib.rst  others.rst  proposal.rst
protocols/light/: Cargo.toml
rule/standard/: Cargo.toml
rule/standard/src/: lib.rs
rules/standard/: Cargo.toml
server/simple_io/: Cargo.toml
servers/simple_io/: Cargo.toml
tests/: Cargo.toml
tests/tests/: lib.rs
tests/tests/standard_light_simple_io/: mod.rs
tests/tests/standard_simple_simple_std/: mod.rs
vs_aiwolf_client/vs_aiwolf_cui/: Cargo.toml
vs_aiwolf_server/vs_aiwolf_simple_io/: Cargo.toml
