[package]
name = "tests"
version = "0.1.0"
authors = ["Keishi Kawada <Kk-shli@outlook.com>"]

[dependencies]
rusty_wolf_common = { path = "../common" }
rusty_wolf_rule_standard = { path = "../rule/standard" }
rusty_wolf_packet_simple = { path = "../packet/simple" }
rusty_wolf_connection_simple_std = { path = "../connection/simple_std" }
